--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "bs-select-5", 
-  "version": "0.0.3",
+  "name": "bs-select", 
+  "version": "0.0.1",
   "description": "Dropdown select box for Bootstrap 5",
   "keywords": [
     "select",
